# ztjy-agent

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  ad_upload_agent.py  device_ad_agent.py  llm_parser.py  router.py
backend/app/api/: routes.py  schemas.py
backend/app/assets/: __init__.py  local_search.py  media_validation.py
backend/app/browser/: __init__.py  adapters.py  mock_admin.py  playwright_admin.py
backend/app/core/: config.py
backend/app/db/: __init__.py  repositories.py  supabase.py
backend/app/safety/: __init__.py  approvals.py  permissions.py
backend/app/workflows/: ad_upload_graph.py  checkpointing.py  device_ad_graph.py  state.py
docs/integration/: real-backend-checklist.md
docs/runbooks/: local-development.md  safety-model.md  supabase-setup.md
docs/superpowers/plans/: 2026-05-11-advertisement-agent-system-plan.md
docs/superpowers/specs/: 2026-05-11-device-ad-agent-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
supabase/: seed.sql
supabase/migrations/: 202605110001_core_schema.sql
tests/: test_ad_upload_workflow.py  test_app_health.py  test_device_ad_workflow.py  test_e2e_mock_scenarios.py  test_langgraph_checkpointing.py  test_llm_router.py  test_local_assets.py  test_mock_admin_adapter.py  test_playwright_adapter_guardrails.py  test_repositories.py  test_safety.py  test_supabase_migration_contract.py  test_task_api.py  test_task_router.py
(+5 files in other folders)
