[project]
name = "advertisement-agent-system"
version = "0.1.0"
description = "Backend scaffold for the advertisement agent system."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "openai>=1.68.0",
    "playwright>=1.45.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.3.0",
    "supabase>=2.5.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
